--- a/src/webapi/layout/main.component.html
+++ b/src/webapi/layout/main.component.html
@@ -1,3 +1,9 @@
+
+
+<div class="theme_layout_main_header">
+  
+</div>
+
 <mat-button-toggle-group #group="matButtonToggleGroup">
   <mat-button-toggle value="left">
     <mat-icon>format_align_left</mat-icon>
@@ -16,3 +22,7 @@
 
 
 <button mat-raised-button color="primary">Primary</button>
+
+
+
+<router-outlet></router-outlet>
