--- a/src/themes/layout.scss
+++ b/src/themes/layout.scss
@@ -1,6 +1,13 @@
 
 
 .theme_layout_main_header{
-    background-color: #3f51b5;
+    background: #c2e59c;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #64b3f4, #c2e59c);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #64b3f4, #c2e59c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
     min-height: 100px;
+}
+
+.theme_layout_center{
+    margin-top: 20px;
 }
