--- a/src/themes/page.scss
+++ b/src/themes/page.scss
@@ -47,3 +47,31 @@
     
 
 }
+
+
+
+
+.theme_page_common_info{
+
+    display: flex;
+    .c_left{
+        flex: 6;
+        padding: 20px;
+    }
+    .c_right{
+        flex: 4;
+    }
+
+    .c_title{
+
+        background-color: #E6EDF3;
+        line-height: 40px;
+        padding-left: 10px;
+        margin-top: 20px;
+    }
+    .c_table{
+        border-left:solid 1px  rgba(0,0,0,.12);
+        border-right:solid 1px  rgba(0,0,0,.12);
+        
+    }
+}
