--- a/src/webapi/sub/table.component.html
+++ b/src/webapi/sub/table.component.html
@@ -3,20 +3,32 @@
     <ng-container matColumnDef="fieldName">
         <mat-header-cell *matHeaderCellDef class="c_name">字段名称</mat-header-cell>
         <mat-cell *matCellDef="let element" class="c_name">
-            <a>{{element.fieldName}}</a>
+            <span>{{element.fieldName}}</span>
         </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="fieldType">
         <mat-header-cell *matHeaderCellDef> 字段类型 </mat-header-cell>
-        <mat-cell *matCellDef="let element"> 
-            <a *ngIf="element.fieldClass"  [routerLink]="" preserveFragment="false" fragment="type_{{element.uniqueCode}}">{{element.fieldType}} </a>
+        <mat-cell *matCellDef="let element">
+            <a *ngIf="element.fieldClass" href="{{inputUrl}}#type_{{element.uniqueCode}}">{{element.fieldType}} </a>
             <span *ngIf="!element.fieldClass">{{element.fieldType}} </span>
-           
+
         </mat-cell>
     </ng-container>
 
+    <ng-container matColumnDef="fieldNote">
+        <mat-header-cell *matHeaderCellDef class="c_name">中文描述</mat-header-cell>
+        <mat-cell *matCellDef="let element" class="c_name">
+            <span>{{element.fieldNote}}</span>
+        </mat-cell>
+    </ng-container>
 
+    <ng-container matColumnDef="filedRemark">
+        <mat-header-cell *matHeaderCellDef class="c_name">备注</mat-header-cell>
+        <mat-cell *matCellDef="let element" class="c_name">
+            <span>{{element.filedRemark}}</span>
+        </mat-cell>
+    </ng-container>
 
 
 
