--- a/src/themes/define.scss
+++ b/src/themes/define.scss
@@ -7,7 +7,23 @@ $define_color_white:#ffffff;
 $define_color_bg_primary:#f4f4f4;
 
 
+$define_base_a_color:#0078D7;
 
-$define_header_bg_color:#db50ac;
+
+$define_base_border_color:#eaeaea;
+
+
+$define_title_bg_color:#DBEAC0;
+
+
+
+$define_header_bg_color:#82b901;
+
+$define_header_bg_color_active:#5E9B1A;
+
+
+$define_menu_bg_color_active:#D4E6B2;
+
+$define_menu_font_color_active:#5E9B1A;
 
 
