--- a/src/themes/page.scss
+++ b/src/themes/page.scss
@@ -7,6 +7,7 @@
 
     .c_left{
         width: 20%;
+        margin-top: 50px;
         padding: 20px;
         
         
@@ -23,8 +24,8 @@
                 }
 
                 .active{
-                    background-color: #F2C3E2;
-                    color: #C8338A;
+                    background-color: $define_menu_bg_color_active;
+                    color: $define_menu_font_color_active;
                 }
             }
         }
@@ -34,7 +35,7 @@
         padding:20px;
         flex: 1;
         a{
-            color: #DC4FAD;
+            color: $define_base_a_color;
         }
     }
 
@@ -60,24 +61,34 @@
     }
     .c_right{
         flex: 4;
+        padding: 20px;
+        
+    }
+    .c_field{
+        width: 100%;
     }
 
     .c_title{
 
         
-        background-color: rgba(192, 150, 190, 0.12);
+        background-color: $define_title_bg_color;
         line-height: 40px;
         padding-left: 10px;
         margin-top: 20px;
     }
     .c_table{
-        border-left:solid 1px  rgba(0,0,0,.12);
-        border-right:solid 1px  rgba(0,0,0,.12);
+        border-left:solid 1px  $define_base_border_color;
+        border-right:solid 1px  $define_base_border_color;
 
         a{
-            color: #DC4FAD;
+            color: $define_base_a_color;
             
         }
         
+    }
+
+    .c_result{
+        width: 100%;
+        margin-top: 30px;
     }
 }
