--- a/src/themes/define.scss
+++ b/src/themes/define.scss
@@ -7,8 +7,14 @@ $define_color_white:#ffffff;
 $define_color_bg_primary:#f4f4f4;
 
 
-$define_base_a_color:#0078D7;
 
+
+$define_base_a_color:#82BA00;
+
+$define_base_a_color_hover:#5E9B1A;
+
+
+$define_base_desc_color:#666;
 
 $define_base_border_color:#eaeaea;
 
