--- a/src/webapi/layout/main.component.html
+++ b/src/webapi/layout/main.component.html
@@ -3,8 +3,9 @@
   <div class="theme_layout_main_header">
 
     <div class="c_logo">
-      <mat-icon>home</mat-icon>
+      <mat-icon class="c_icon">home</mat-icon>API文档
     </div>
+    
     <div class="c_nav">
       <nav>
         <a mat-button *ngFor="let link of propHeaderNav" [routerLink]="link.path" routerLinkActive="active">
