--- a/src/webapi/common/list.component.html
+++ b/src/webapi/common/list.component.html
@@ -20,7 +20,7 @@
           <ng-container matColumnDef="apiClass">
             <mat-header-cell *matHeaderCellDef class="c_name">API函数</mat-header-cell>
             <mat-cell *matCellDef="let element" class="c_name"> 
-              <a [routerLink]="'../../info/'+element.code">{{element.apiClass}}</a> </mat-cell>
+              <a class="theme_base_a" [routerLink]="'../../info/'+element.code">{{element.apiClass}}</a> </mat-cell>
           </ng-container>
 
           <ng-container matColumnDef="apiName">
