--- a/src/webapi/common/info.component.html
+++ b/src/webapi/common/info.component.html
@@ -8,7 +8,7 @@
         <div class="c_title">
             请求参数
 
-
+            <a   class="theme_base_a" [routerLink]=""  fragment="type_5">a </a>
         </div>
         <div class="c_table">
             <uwb-sub-table [inputFields]="propStructInfo.structInput.classFields" [inputUrl]="propUrl"></uwb-sub-table>
@@ -38,7 +38,7 @@
 
                 <div class="c_title" id="type_{{item.uniqueCode}}">
 
-                    结构体{{item.className}}
+                    结构体{{item.shortName}}
 
                 </div>
 
