--- a/src/themes/define.scss
+++ b/src/themes/define.scss
@@ -9,9 +9,9 @@ $define_color_bg_primary:#f4f4f4;
 
 
 
-$define_base_a_color:#82BA00;
+$define_base_a_color:#00ADB5;
 
-$define_base_a_color_hover:#5E9B1A;
+$define_base_a_color_hover:#08D9D6;
 
 
 $define_base_desc_color:#666;
@@ -19,17 +19,17 @@ $define_base_desc_color:#666;
 $define_base_border_color:#eaeaea;
 
 
-$define_title_bg_color:#DBEAC0;
+$define_title_bg_color:#A8D8EA;
 
 
 
-$define_header_bg_color:#82b901;
+$define_header_bg_color:#393E46;
 
-$define_header_bg_color_active:#5E9B1A;
+$define_header_bg_color_active:#00ADB5;
 
 
-$define_menu_bg_color_active:#D4E6B2;
+$define_menu_bg_color_active:#3FC1C9;
 
-$define_menu_font_color_active:#5E9B1A;
+$define_menu_font_color_active:#364F6B;
 
 
